0.6.0 - Bumped version, logback fixed, Formula fixed